Update box model before.html

--- a/box model before.html
+++ b/box model before.html
@@ -5,11 +5,14 @@
 <title>The Box model</title>
 <Style>
 body{
+	margin: 0;
+	padding: 0;
 	background-color:gray;
 }
 
 #box{
 	Background-color: blue;
+	padding: 10px 10px 10px 10px;
 }
 #content {
 	background-color: #90ee90; //green
