--- a/box model before.html
+++ b/box model before.html
@@ -13,6 +13,8 @@ body{
 #box{
 	Background-color: blue;
 	padding: 10px 10px 10px 10px;
+	border:3px solid black;
+	margin;40px;
 }
 #content {
 	background-color: #90ee90; //green
