--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-  <H1> hellow coursera!</h1>
+  <Body>
+<h1>coursera test </h1>
 
+<p> that one is my first coursera test for second week i hope writting this code good and will continue working and practicing to learning this beautifull lenguage;
+</p>
