--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
   <head>
   <meta charset="utf-8">
     <title> style placement </title>
-    
     </head>
 <body>
-  <h1>
+  <h1>chicken</h1>
       
   <p> that one is my first coursera test for second week
       i hope writting this code good and will continue working and practicing
