--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
   <meta charset="utf-8">
-    <title> style placement </title>
+    <title> internal css</title>
+    <style tipe="test/css"
     </head>
-<body>
-  <h1>chicken</h1>
+<body> background color: red
+  h{ color red;}
       
   <p> that one is my first coursera test for second week
       i hope writting this code good and will continue working and practicing
