--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <html>
   <head>
-     <title> internal css</title>
-    <style tipe="test/css"
-    </head>
-<body> background color: red
-  h{ color red;}
-      
-  <p> that one is my first coursera test for second week
-      i hope writting this code good and will continue working and practicing
-      to learning this beautifull lenguage;
-</p>
-    </body>
-  </html>
+     <div class="page">
+       <h1> potato,/h1>
+         <p> there are  dozen  of diferent potato varietys.</p>
+         <p> they are usually described as aerly.</p>
+         </div>
+       </head>
+    </html>
+   
     
    
