--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
      <div class="page">
-       <h1> potato,/h1>
+       <h1> potato,</h1>
          <p> there are  dozen  of diferent potato varietys.</p>
          <p> they are usually described as aerly.</p>
          </div>
