--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   <head>
      <div class="page">
        <h1> potato,</h1>
+       body{
+font-family:arial black;
+blackground-color gray}
+h1{
+color:blue}
+       
          <p> there are  dozen  of diferent potato varietys.</p>
          <p> they are usually described as aerly.</p>
          </div>
