--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <html>
   <head>
-     <div class="page">
-       <h1> potato,</h1>
-     <p> there are  dozen  of diferent potato varietys.</p>
-         <p> they are usually described as aerly.</p>
-         </div>
-       </head>
-    </html>
+    <meta charset="utf-8">
+    <title> our menu</title>
+    <link rel="stylesheet"hret="style.css">
+    <style>
+      h1{
+        color:blue;
+      }
+      h2{
+        color:red;
+      }
+      h3{ 
+        color:green;
+      }
+      <style/>
+      </head>
+      <body>
+      <h1>chicken</h1>
+      <h2>sushi</h2>
+      <h3>pork</h3>
+      <p1>our chicken is one of the more flavore food in the word </p1>
+      <p2> we use all organic product for prepering the most delicius suchi 
+      in the are.</p2>
+      <p3> try our new plate of pork.</p3>
+      </body>
+      </html>
+      
    
     
    
