--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   <head>
     <meta charset="utf-8">
     <title> our menu</title>
-    <link rel="stylesheet"hret="style.css">
     <style>
       h1{
         color:blue;
@@ -13,7 +12,7 @@
       h3{ 
         color:green;
       }
-      <style/>
+      </style>
       </head>
       <body>
       <h1>chicken</h1>
