--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       </head>
       <body>
       <h1>chicken</h1>
+         <p1>our chicken is one of the more flavore food in the word </p1>
       <h2>sushi</h2>
+        <p2> we use all organic product for prepering the most delicius suchi.</p2> 
       <h3>pork</h3>
-      <p1>our chicken is one of the more flavore food in the word </p1>
-      <p2> we use all organic product for prepering the most delicius suchi 
-      in the are.</p2>
-      <p3> try our new plate of pork.</p3>
+       <p3> try our new plate of pork.</p3>
       </body>
       </html>
       
