--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       h2{
         color:red;
       }
-      h3{ 
-        color:green;
+      h2{ 
+        color:red;
       }
       </style>
       </head>
@@ -18,9 +18,9 @@
       <h1>chicken</h1>
          <p1>our chicken is one of the more flavore food in the word </p1>
       <h2>sushi</h2>
-        <p2> we use all organic product for prepering the most delicius suchi.</p2> 
-      <h3>pork</h3>
-       <p3> try our new plate of pork.</p3>
+        <p> we use all organic product for prepering the most delicius suchi.</p> 
+      <h2>pork</h2>
+       <p> try our new plate of pork.</p>
       </body>
       </html>
       
