--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
       }
       </style>
       </head>
-      <body>
+      body{
+  margi: 0;
+  padding: 0;
+  background-color:black;
+  }
+  
+  #box{
+  background-color:gray;
+  padding: 10px 10px 10px 10px;
+  border:10px solid black;
+  margin:40;
+  width:90;
+  
       <h1>chicken</h1>
-         <p1>our chicken is one of the more flavore food in the word </p1>
-      <h2>sushi</h2>
+         <p>our chicken is one of the more flavore food in the word </p1>
+      <h2>Beef</h2>
         <p> we use all organic product for prepering the most delicius suchi.</p> 
-      <h2>pork</h2>
+      <h2>Suchi</h2>
        <p> try our new plate of pork.</p>
       </body>
       </html>
