--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       }
       </style>
       </head>
-      body{ 
+     < body>
   
   margi: 0;
   padding: 0;
   background-color:black;
-  }
+  
   
   #box{
   background-color:gray;
