--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <p> we use all organic product for prepering the most delicius suchi.</p> 
       <h2>Suchi</h2>
        <p> try our new plate of pork.</p>
+  </body>
       
       </html>
       
