--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <meta charset="utf-8">
     <title> our menu</title>
     <style>
-      h1{
-        color:blue;
+      h1
+      {color: blanck
+      h2{
+        color:red;
       }
       h2{
         color:red;
@@ -12,23 +14,13 @@
       h2{ 
         color:red;
       }
+
       </style>
       </head>
      < body>
+       <h1> OUR  MENU</h1>
   
-  margi: 0;
-  padding: 0;
-  background-color:black;
-  
-  
-  #box{
-  background-color:gray;
-  padding: 10px 10px 10px 10px;
-  border:10px solid black;
-  margin:40;
-  width:90;
-  
-      <h1>chicken</h1>
+  <h2>chicken</h2>
          <p>our chicken is one of the more flavore food in the word </p1>
       <h2>Beef</h2>
         <p> we use all organic product for prepering the most delicius suchi.</p> 
