--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       </style>
       </head>
      <body>
+       
+       <div class="container-fluid">
+<div class="row">
+<div class="clo-md-4">col 1</div>
+<div class="col-md-4">col 2</div>
+<div class="col-md-4">col 3</div>
+</div>
+</div>
+
        <h1> OUR  MENU</h1>
   
   <h2>chicken</h2>
