--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 
     <title> boostrap starte page</title>
-     <link rel="stylesheet" href=" bootstrap.min.css">
+ 
      <link rel="stylesheet"href="css/styles,css">
       </head>
      <body>
 
      	<h1> our menu </h1>
-     	<script scr="js/ bootstrap.min.js.map></script>
-     	<scriptscr="js/script.js></script>scritp>
+     	
+     	<scriptscr="js/script.js> </script>
      	</body>
 
 
