--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
    
 
     <h2> chicken </h2>
-
       <p> our chicken wings is one of the most flavore
-    chicken.</p>
+       chicken. 
+      </p>
 
-    <h2< sushi </h2>
+    <h2> sushi </h2>
       <P> We have prepared this sushi recipe with the freshest and most organic products. 
          to give you a sensation of freshness and juiciness inside the palate.
          try it and so they don't tell you.
