--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1> our menu </h1>
     <!--TODO: agregar los aliniamientos para h1 y h2-->
    
-
+    <table>
     <h2> chicken </h2>
       <p> our chicken wings is one of the most flavore
        chicken. 
@@ -27,7 +27,7 @@
          it with us and you will not regret it.
       </p>
 
-
+    <?table>
     
   </body>  
 
