--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
 <html>
-<head>
+  <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-</head>
-<body>
+	<title> coursera test</title>
 
-</body>
+
+  <body>
+  	<h1>our menu</h1>
+
+  	<h2> Chicke </h2>
+      <p>our chiquen wins is one of the most flavores 
+       wis.
+      </p>
+    
+
+    <h2> Suchi</h2>
+      <p> We prepare this special plate whit most fresh
+       and organic product to warranty a good experience. 
+      </p> 
+
+    <h2> Beef</h2>
+      <P>The elaboration of this dish requires some of the 
+      	oldest techniques to obtain an explosion of flavors
+      	on your palate.where in cooking time, the temperature 
+      	and the products to be used will play a very important
+      	role in its preparation.
+      </p>
+  </body>
+
 </html>
+
 
