--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
   	<h1>our menu</h1>
 
-  	<h2> Chicke </h2>
+  	<h2 style="color: blue"> Chicke </h2>
       <p>our chiquen wins is one of the most flavores 
        wis.
       </p>
