--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> coursera test</title>
+	<link rel="stylesheet" type="text/css" href="">
+
+	
+
+
+</head>
 
 
   <body>
   	<h1>our menu</h1>
 
-  	<h2 style="color: blue"> Chicke </h2>
+  	<h2> Chicke </h2>
       <p>our chiquen wins is one of the most flavores 
        wis.
       </p>
