--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> coursera test</title>
-	<link rel="stylesheet" type="css" href="">
+	<style>
+	   H2{
+	   	color: blueviolet;
+	   }
 
 	
 
@@ -34,6 +37,7 @@
       	role in its preparation.
       </p>
   </body>
+</head>
 
 </html>
 
