--- a/index.html
+++ b/index.html
@@ -2,19 +2,9 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> coursera test</title>
-	<style>
-	   H2{
-	   	color: blueviolet;
-	   }
-
 	
-
-
-
-
-
+	   	
   <body>
   	<h1>our menu</h1>
 
@@ -38,7 +28,7 @@
       </p>
   </body>
 
-
+  </head>
 </html>
 
 
