--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
 	<meta charset="utf-8">
 	<title> coursera test</title>
-	<link herf="style.css" rel="stylesheet">
+	<link herf="style.css" type="text/class" rel="stylesheet"/>
 	
-	</head>  	
+  </head>  	
   <body>
   	<h1>our menu</h1>
 
