--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="us">
   <head>
 	<meta charset="utf-8">
 	<title> coursera test</title>
-	<link herf="style.css" type="text/class" rel="stylesheet"/>
+	<link herf="style.css" type="text/css" rel="stylesheet"/>
 	
   </head>  	
   <body>
