--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
 	<meta charset="utf-8">
 	<title> coursera test</title>
-	<link herf="style.css" type="text/css" rel="stylesheet"/>
+	<style type="text/css">
+		
+		body{font-family: arial:
+			background-color green;}
+
+			h1{
+				color:green;
+
+			}
 	
   </head>  	
   <body>
