--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
 	<meta charset="utf-8">
 	<title> coursera test</title>
+	<link rel="stylesheet" type="text/css" href=".style.css">
 	<style type="text/css">
-		
+
 		body{font-family: arial:
 			background-color green;}
 
