--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
 	
   </head>  	
   <body>
-  	<h1>our menu</h1>
+  	<h1 style="color: blue;">our menu</h1>
 
-  	<h2> Chicke </h2>
+  	<h2 style="color: green;"> Chicke </h2>
       <p>our chiquen wins is one of the most flavores 
        wis.
       </p>
     
 
-    <h2> Suchi</h2>
+    <h2 style="color: green;"> Suchi</h2>
       <p> We prepare this special plate whit most fresh
        and organic product to warranty a good experience. 
       </p> 
 
-    <h2> Beef</h2>
+    <h2 style="color: green;"> Beef</h2>
       <P>The elaboration of this dish requires some of the 
       	oldest techniques to obtain an explosion of flavors
       	on your palate.where in cooking time, the temperature 
       	and the products to be used will play a very important
       	role in its preparation.
       </p>
+      
   </body>
 
  
