--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
   </head>  	
   <body>
-  	<h1 style="color: blue;">our menu</h1>
+  	<h1 style="color: red;">our menu</h1>
 
   	<h2 style="color: green;"> Chicke </h2>
       <p>our chiquen wins is one of the most flavores 
@@ -29,7 +29,7 @@
       	and the products to be used will play a very important
       	role in its preparation.
       </p>
-      
+
   </body>
 
  
