--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
 	<meta charset="utf-8">
 	<title> coursera test</title>
-    <style=type".style.css">
+    <style type=".style.css">
 
-	
+
   </head>  	
   <body>
   	<h1 >our menu</h1>
