--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 	<meta charset="utf-8">
 	<title> coursera test</title>
+	<link href="ccs/style.css"type="text/css" rel="stylesheet"/>
     <style type=".style.css">
 
 
