--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title> coursera test</title>
 	<link href="ccs/style.css"type="text/css" rel="stylesheet"/>
-    <style type=".">
+    <style type=".style.css">
 
 
   </head>  	
