--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>oru menu</title>
+    <style type="text/css">
+      body{
+        font-famyli:arial;
+        background-color: darkred;
+      
+      h1{
+        color:red;
+        
+      }
+
+
+    </style>
 
   </head>
 
