--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         color: black;
         padding: 10px;
         background-color: silver;
-        border-block:black ;
+        border:10px 10px 10px 10px ;
 
 
 
