--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
         color: black;
         padding: 10px;
         background-color: silver;
-        border:10px 10px 10px 10px ;
+        border:10px solid 10pxsolid 10pxsolid 10pxsolid ;
+        margin:20px 20px 20px 20px;
 
 
 
        }
 
       h2{
-        color: greenyellow;
+        color: black;
         padding-block: initial;
         border-block-color: black;
 
        }
-      h1{ color:greenyellow; }
+
+      h1{ 
+        color:black; 
+      }
 
     </style>
 
