--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 
       }
 
-      
+       h2{
+        text align="rigth"
+      background-color: red
+
+      }
+
     </style>
 
   </head>
 
-  <body>
+  <body borde: 1px solid;>
 
     <h1 text align=" center"> our menu </h1>
 
