--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   </head>
 
-  <body borde: 1px solid;>
+  <body borde: 1px solid;
+        >
 
     <h1 text align=" center"> our menu </h1>
 
@@ -36,7 +37,7 @@
 
       
 
-       <p text align="center">“Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+       <p text align="center" border-style:solid;>“Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmodtempor incididunt ut labore et dolore <br/> magna 
        aliqua.”
 
