--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
   </head>
 
+
+<!-- note:i have some problem with my css i can't written 
+  some code in the css and make the change on the thml.index--> 
+
   <body borde: 1px solid;
         >
 
