--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>our menu</title>
-    <link rel="stylesheet" type="text/css" href="style,css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+                                                
   </head>
   <body>
     <h1>Hello, world!</h1>
