--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
 
   </head>
   <body>
+    <div> class=" container_12 clearfix">
+      < div="header" class="grid_12">
     <h1>Hello, world!</h1>
+      <div=id="nav"
+
+    <h2>  chicken</h2>
+      <p class="one"> Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.   The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+      </p>
+    <h2> suchi </h2>
+    
+      <p class="two"> Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid
+      unt ut labore et dolore magna aliqua.”
+      </p> 
+
+      <p class=" tree">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+
+      </p>   
+
   </body>
 </html>
