--- a/index.html
+++ b/index.html
@@ -3,34 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>our menu</title>
+    <title>ours menu</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
   </head>
+
   <body>
-    <div> class=" container_12 clearfix">
-      < div="header" class="grid_12">
-    <h1>Hello, world!</h1>
-      <div=id="nav"
+    <div id="content">
+      <div id="h1">
+    
+    <h1> our menu </h1>
+     <div/> 
+
+
+
 
     <h2>  chicken</h2>
-      <p class="one"> Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.   The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+      <div class="p1">
+        <p1> Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.   The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
 
-      “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
-      </p>
+        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+        </p1>
+      </div>
+
     <h2> suchi </h2>
-    
-      <p class="two"> Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+      <div class="p2">
+        <p2> Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
 
-      “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid
-      unt ut labore et dolore magna aliqua.”
-      </p> 
+        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid
+        unt ut labore et dolore magna aliqua.”
+        </p2> 
+      <div class="p2">
 
-      <p class=" tree">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+    <h2> beef </h2>
+       <div class="p3"
+        <p3>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
 
-      “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
 
-      </p>   
-
+        </p3>   
+      <div/>
   </body>
 </html>
