--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ours menu</title>
-    <style>
+    <style type="text/css">
 /*************** base style****************/     
 h1{
   margin-bottom: 15px;
