--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ p{
   background-color: blueviolet;
   width: 300px;
   height:300px;
+  border-color: black;
+  border: 20px;
+  
 }
 #p2{
   background-color: darkred;
