--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@ p{
   background-color: blueviolet;
   width: 300px;
   height:300px;
-  border-color: black;
-  border: 20px;
+  border-block: darkred;
   
-}
 #p2{
   background-color: darkred;
   width: 300px;
