--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ p{
 
 }
 #p1{
-  background-color: blueviolet;
+  background-color: darkred;
   width: 300px;
   height:300px;
-  border-block: darkred;
+  
   
 #p2{
   background-color: darkred;
