--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title> cousera test </title>
-    <link=her
-  </head> 
+    <link href="style.css" type="text/css" rel="stylesheet" /> 
+
+  </head>
+
   <body>
     
       <h1> our menu </h1>
