--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-----  add small device only------>
   <body>
     <div id="header">
+    <div id="nav">
       <h1> our menu </h1>
       
       <h2>  chicken</h2>
@@ -51,6 +52,7 @@
     <h2> suchi </h2>
 
         <div class=" article column2">
+          
           <p > Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print,
          graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who 
          is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen
@@ -62,6 +64,7 @@
          </div>
 
     <h2> beef </h2>
+
         <div class="article column 3">
           <p>
             Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, 
