--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
      <body>
 
+    <h1>OUR MENU</h1>
+    
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="box">
-          <p class="conteine-name name1"> chicken</p>
-          <p class="conteiner">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
+          <p class="content-name name1"> chicken</p>
+          <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
             velit sint enim doloremque?Recusandae minus laborum unde consequatur numquam consequuntur enim eaque, exercitationem 
             consectetur facilis ut.
           </p>
@@ -20,8 +22,8 @@
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="box">
-          <p class="conteine-name name2"> suchi</p>
-          <p class="conteiner">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
+          <p class="content-name name2"> suchi</p>
+          <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
             velit sint enim doloremque?Recusandae minus laborum unde consequatur numquam consequuntur enim eaque, exercitationem 
             consectetur facilis ut.
           </p>
@@ -30,8 +32,8 @@
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="box">
-          <p class="conteine-name name3"> chicken</p>
-          <p class="conteiner">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
+          <p class="content-name name3"> chicken</p>
+          <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
             velit sint enim doloremque?Recusandae minus laborum unde consequatur numquam consequuntur enim eaque, exercitationem 
             consectetur facilis ut.
           </p>
