--- a/about.html
+++ b/about.html
@@ -87,3 +87,31 @@
    
 
 </html>
+@media ( min-width: 992px) 
+	{.col-lg-4{
+		float: center;
+		width: 33.33%;
+	}
+}
+	
+@media (min-wid: 768PX ) and (max-width:992px) 
+   { .col-md-6,.col-md-12 
+	{float:left; 
+
+	}
+    .col-md-6{
+	width: 50%;
+	float: center;
+	}
+	.col-md-12{
+	margin-left: 12px;
+	max-width: 100%;
+	}
+}
+	
+
+@media(min-width: 0px) and (max-width: 767px)
+ {.col-sm-12 {
+	float: center;
+	width: 97%;
+ }
