--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
           <p class="content-name name1"> chicken</p>
           <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
             velit sint enim doloremque?Recusandae minus laborum unde consequatur numquam consequuntur enim eaque, exercitationem 
-            consectetur facilis ut.
+            consectetur facilis ut.Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic
+             or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled
+              parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
           </p>
+
         </div>
       </div>
 
@@ -26,7 +29,10 @@
           <p class="content-name name2"> suchi</p>
           <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
             velit sint enim doloremque?Recusandae minus laborum unde consequatur numquam consequuntur enim eaque, exercitationem 
-            consectetur facilis ut.
+            consectetur facilis ut.Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic
+             or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled 
+             parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+
           </p>
         </div>
       </div>
@@ -36,7 +42,10 @@
           <p class="content-name name3"> chicken</p>
           <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores blanditiis nesciunt sequi aliquid 
             velit sint enim doloremque?Recusandae minus laborum unde consequatur numquam consequuntur enim eaque, exercitationem 
-            consectetur facilis ut.
+            consectetur facilis ut.Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic 
+            or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled 
+            parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
+            
           </p>
         </div>
       </div>
