--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html >
-  <html lang="us">
+<!doctype html>
+  <html lang="en">
     <head>
-      
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+
+      <meta charset="utf-8">
       <title> cousera test </title>
       <link href="style.css" type="text/css" rel="stylesheet" />
 
