--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
     <head>
-
-      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title> cousera test </title>
       <link href="style.css" type="text/css" rel="stylesheet" />
 
