--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> food llc </title>
     <link href="style.css" type="text/css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="code.jquery.com_jquery-3.6.4.js">
+    <link rel=""
   </head>
-  <h1>
-  </h1>
+
+    <h1>  OUR MENU </h1>
+
    <body>
 
 <!-----------------------------First auto-column------------------------------------------->
            <div class="grid text-center" style="--bs-columns: 3;">
            </div>
              <div class="grid">
-                <div>Auto-column</div>
-               <div>Auto-column</div>
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                   Tempora aperiam voluptatem, facere asperiores 
+                    repudiandae explicabo quam sequi natus neque quaerat
+                     voluptas delectus debitis, quisquam unde facilis, inventore 
+                      nulla!
+                    </div>
+               <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Commodi fugiat tempore illum, quisquam accusamus repellendus 
+                quod praesentium fuga earum perspiciatis corporis placeat 
+                consequuntur, nihil natus ducimus repudiandae aspernatur 
+                rerum ullam.
+              </div>
               </div>
             </div>
           
@@ -24,9 +36,9 @@
           <div>
            <div class="grid" style="--bs-columns: 12;">
 
-              <div class="g-col-6">6 of 12</div>
-              <div class="g-col-4">4 of 12</div>
-              <div class="g-col-2">2 of 12</div>
+              <div class="g-col-6">chicken</div>
+              <div class="g-col-4">beef</div>
+              <div class="g-col-2">suchi</div>
             </div>
           </div>
 
