--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="bootstrap.min.css.map">
   </head>
 
-    <h1>  OUR MENU </h1>
-
    <body>
      <header>
         <nav id="header-nav" class=" navbar navbar-default">
           <div class="conteiner">
+            <div class="navbar-header">
+              <a href="index.html" class="pull left visible-md visible-lg">
+                <div id="logo-img"alt
 
 
           </div>
