--- a/index.html
+++ b/index.html
@@ -14,7 +14,34 @@
           <div class="conteiner">
             <div class="navbar-header">
               <a href="index.html" class="pull left visible-md visible-lg">
-                <div id="logo-img"alt
+                <div id="logo-img"alt="logo-img"></div>
+              </a>
+
+              <div class="navbar-brand">
+                <a href="index.html"><h1></h1> food llc</h1></a>
+
+                <p>
+                  <img src="IMG/LOGO IMG COURSERA TEXT.png" Alt="kocher certification">
+                  <span>kosher certified</span>
+                  </p>
+              </div>
+
+              <button type="button"class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#collpse-nav" arial-expanded="false">
+
+                <span class="sr-only">toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+
+            <div id="collapsable-nav" class="collapsed navbar-collapse">
+              <ul id="nav-list" class="nav navbar-nav-right">
+                <li>
+                  <span class="glyphicon glyphicon-culyery"></span><br class="hidden-xs">menu</a>
+                </li>
+
+          
 
 
           </div>
