--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <header>
       <nav id="header-nav" class="navbar navbar-default">
         <div class="conteiner">
+          <div class="navbar-header">
+            <a href="index.html" class="">
+            <div id="logo-img" alt="logo-img">
+
+            </div>
+            </a>
+      
 
         </div>
       </nav>
@@ -20,5 +27,5 @@
    
 
    </body>  
-    
+
 </html>   
