--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 
    <body>
     <header>
-      <nav id="header-nav" class="navbar navbar-default">
-        <div class="conteiner">
-          <div class="navbar-header">
-            <a href="index.html" class="">
-            <div id="logo-img" alt="logo-img">
-
-            </div>
-            </a>
-      
-
-        </div>
-      </nav>
-     </header>
+      <nav>
+        <i class="icofont-navigation-menu"></i>
+        <label class="logo-img"> FOOD LLC</label>
+          <ul>
+            <li><a class="active" href="#"> home</a></li>
+            <li><a href="#"> menu</a></li>
+            <li><a href="#"> delivery</a></li>
+            <li><a href="#"> contact</a></li>
+            <li><a href="#"> feedback</a></li>
+         </ul>
+    </nav>
+   </header>
    
 
    </body>  
