--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <nav>
         
         <label class="logo-img"> FOOD LLC</label>
+        <i class="bi bi-list"></i>
+
           <ul>
             <li><a class="active" href="#"> home</a></li>
             <li><a href="#"> menu</a></li>
