--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       
       <nav>
-         <label class="logo-img"> FOOD LLC</label>
+         <label class="logo-img"> kocher certified</label>
           <ul>
             <li><a class="active" href="#"> home</a></li>
             <li><a href="#"> menu</a></li>
