--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
       </div> 
 
       <div class= img2>
-        <img alt="img" src="IMG/restauranta .png" >
+        <img alt="img" src="IMG/chicken.jpg .png" >
       </div> 
 
       <div class= img2>
-        <img alt="img" src="IMG/restauranta .png" >
+        <img alt="img" src="IMG/Sushi-01.jpg .png" >
       </div> 
 
       <div class= img2>
-        <img alt="img" src="IMG/restauranta .png" >
+        <img alt="img" src="IMG/beef.jpg .png" >
       </div> 
     </div>  
      
