--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset=" utf-8" >
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title> cousera test </title>
+      <link href="style.css" type="text/css" rel="stylesheet" />
+
+    </head>
+
+     <body>
+
+
+
+
 <main class="js">
 
   <section class="aw-header bg-white border-b border-gray-200 shadow-md">
