--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     </head>
 
       <header>
-        <header class="header">
-         <div class="LOGO">
-            <a class="navbar-brand" href="#">
-            <img src="IMG/LOGO food.png" alt="the best food" width="400" height="300">
-            </a>
-          </div>
+        
+        <div class="LOGO">
+          <img src="IMG/LOGO food.png" alt="the best foo" width="300px" height="400px">
+         </div>
 
           <nav>
             <ul class="nav-link">
