--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link href="style.css" type="text/css" rel="Bootstrap.min.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <script rel="Bootstrap.bundles.js" href="script.js" ></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4Y"></script>
     </head>
 
       <header>
@@ -14,15 +15,13 @@
         <div class="LOGO">
           <img src="IMG/LOGO food.png" alt="the best foo" width="300px" height="400px">
          </div>
-
-          <nav>
-            <ul class="nav-link">
-              <li><a href="#">services</a></li>
-              <li><a href="#">delivery</a></li>
-              <li><a href="#">menu</a></li>
-              <li><a href="#">about</a></li>
-           </ul>
-          </nav>
+           <nav class="nav">
+              <a class="nav-link active" aria-current="page" href="index.html">home</a>
+              <a class="nav-link" href="#">menu</a>
+              <a class="nav-link" href="#">contact</a>
+              <a class="nav-link disabled">about</a>
+        </nav>
+          
           <a href="#" class="btn"><button>contact</button></a>
 
       </header>
