--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,8 @@
 
 
   </head>
-
+<!----------------the same nav barfor all pages-------------->
+<!----------------index2.html menu page-------------->
     <header>
 
       <nav class="nav">
