--- a/index4.html
+++ b/index4.html
@@ -9,9 +9,9 @@
       <script rel="Bootstrap.bundles.js" href="script.js" ></script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4Y"></script>
 
-
   </head>
-
+<!----------------the same nav barfor all pages-------------->
+<!----------------index4.html about page----------->
     <header>
 
       <nav class="nav">
