--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,8 @@
 
 
   </head>
-
+<!----------------the same nav barfor all pages-------------->
+<!----------------index3.html contac page----------->
     <header>
 
       <nav class="nav">
