--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset=" utf-8" >
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title> food llc</title>
-      <link href="style.css" rel="Bootstrap.min.css">
+      <link href="style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <script rel="Bootstrap.bundles.js" href="script.js" ></script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4Y"></script>
