--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
               <a class="nav-link active" aria-current="page" href="index.html">home</a>
               <a class="nav-link" href="index2.html">menu</a>
               <a class="nav-link" href="index3.html">contact</a>
-              <a class="nav-link disabled">about</a>
+              <a class="nav-link" href="index4.html">about</a>
+              
         </nav>
 
       </header>
