--- a/food.html
+++ b/food.html
@@ -91,9 +91,72 @@
        </nav>
 
 
+<!------------validation form code -->
 
-
-
+       <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">First name</label>
+          <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom02" class="form-label">Last name</label>
+          <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label">Username</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">@</span>
+            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+            <div class="invalid-feedback">
+              Please choose a username.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustom03" class="form-label">City</label>
+          <input type="text" class="form-control" id="validationCustom03" required>
+          <div class="invalid-feedback">
+            Please provide a valid city.
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom04" class="form-label">State</label>
+          <select class="form-select" id="validationCustom04" required>
+            <option selected disabled value="">Choose...</option>
+            <option>...</option>
+          </select>
+          <div class="invalid-feedback">
+            Please select a valid state.
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom05" class="form-label">Zip</label>
+          <input type="text" class="form-control" id="validationCustom05" required>
+          <div class="invalid-feedback">
+            Please provide a valid zip.
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+            <label class="form-check-label" for="invalidCheck">
+              Agree to terms and conditions
+            </label>
+            <div class="invalid-feedback">
+              You must agree before submitting.
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
+      </form>
 
 
 
@@ -103,4 +166,153 @@
      </body>
     </head>
   </html>
-
+<!---
+  @mixin form-validation-state-selector($state) {
+    @if ($state == "valid" or $state == "invalid") {
+      .was-validated #{if(&, "&", "")}:#{$state},
+      #{if(&, "&", "")}.is-#{$state} {
+        @content;
+      }
+    } @else {
+      #{if(&, "&", "")}.is-#{$state} {
+        @content;
+      }
+    }
+  }
+  
+  @mixin form-validation-state(
+    $state,
+    $color,
+    $icon,
+    $tooltip-color: color-contrast($color),
+    $tooltip-bg-color: rgba($color, $form-feedback-tooltip-opacity),
+    $focus-box-shadow: 0 0 $input-btn-focus-blur $input-focus-width rgba($color, $input-btn-focus-color-opacity),
+    $border-color: $color
+  ) {
+    .#{$state}-feedback {
+      display: none;
+      width: 100%;
+      margin-top: $form-feedback-margin-top;
+      @include font-size($form-feedback-font-size);
+      font-style: $form-feedback-font-style;
+      color: $color;
+    }
+  
+    .#{$state}-tooltip {
+      position: absolute;
+      top: 100%;
+      z-index: 5;
+      display: none;
+      max-width: 100%; // Contain to parent when possible
+      padding: $form-feedback-tooltip-padding-y $form-feedback-tooltip-padding-x;
+      margin-top: .1rem;
+      @include font-size($form-feedback-tooltip-font-size);
+      line-height: $form-feedback-tooltip-line-height;
+      color: $tooltip-color;
+      background-color: $tooltip-bg-color;
+      @include border-radius($form-feedback-tooltip-border-radius);
+    }
+  
+    @include form-validation-state-selector($state) {
+      ~ .#{$state}-feedback,
+      ~ .#{$state}-tooltip {
+        display: block;
+      }
+    }
+  
+    .form-control {
+      @include form-validation-state-selector($state) {
+        border-color: $border-color;
+  
+        @if $enable-validation-icons {
+          padding-right: $input-height-inner;
+          background-image: escape-svg($icon);
+          background-repeat: no-repeat;
+          background-position: right $input-height-inner-quarter center;
+          background-size: $input-height-inner-half $input-height-inner-half;
+        }
+  
+        &:focus {
+          border-color: $border-color;
+          box-shadow: $focus-box-shadow;
+        }
+      }
+    }
+  
+    // stylelint-disable-next-line selector-no-qualifying-type
+    textarea.form-control {
+      @include form-validation-state-selector($state) {
+        @if $enable-validation-icons {
+          padding-right: $input-height-inner;
+          background-position: top $input-height-inner-quarter right $input-height-inner-quarter;
+        }
+      }
+    }
+  
+    .form-select {
+      @include form-validation-state-selector($state) {
+        border-color: $border-color;
+  
+        @if $enable-validation-icons {
+          &:not([multiple]):not([size]),
+          &:not([multiple])[size="1"] {
+            --#{$prefix}form-select-bg-icon: #{escape-svg($icon)};
+            padding-right: $form-select-feedback-icon-padding-end;
+            background-position: $form-select-bg-position, $form-select-feedback-icon-position;
+            background-size: $form-select-bg-size, $form-select-feedback-icon-size;
+          }
+        }
+  
+        &:focus {
+          border-color: $border-color;
+          box-shadow: $focus-box-shadow;
+        }
+      }
+    }
+  
+    .form-control-color {
+      @include form-validation-state-selector($state) {
+        @if $enable-validation-icons {
+          width: add($form-color-width, $input-height-inner);
+        }
+      }
+    }
+  
+    .form-check-input {
+      @include form-validation-state-selector($state) {
+        border-color: $border-color;
+  
+        &:checked {
+          background-color: $color;
+        }
+  
+        &:focus {
+          box-shadow: $focus-box-shadow;
+        }
+  
+        ~ .form-check-label {
+          color: $color;
+        }
+      }
+    }
+    .form-check-inline .form-check-input {
+      ~ .#{$state}-feedback {
+        margin-left: .5em;
+      }
+    }
+  
+    .input-group {
+      > .form-control:not(:focus),
+      > .form-select:not(:focus),
+      > .form-floating:not(:focus-within) {
+        @include form-validation-state-selector($state) {
+          @if $state == "valid" {
+            z-index: 3;
+          } @else if $state == "invalid" {
+            z-index: 4;
+          }
+        }
+      }
+    }
+  }
+  -------->
