--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <script rel="Bootstrap.bundles.js" href="script.js" ></script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4Y"></script>
     </head>
-    
+    <!--------------------decorative fonts(font in the wild)------------->
     <body>
       <!----------------the same nav barfor all pages-------------->
         <!----------------index.html home page------------->
