--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
         <div class="conteiner">
           <div class="LOGO">
             <img src="IMG/logo.png" alt="the best foo">
-            <h2 class="restaurant-name">the best food</h2>
+            <h2 class="restaurant-name">food llc </h2>
           </div>
 
-          <div class="nav-bar">
             <nav>
               <a class="nav-link active" aria-current="page" href="index.html">home</a>
               <a class="nav-link" href="index2.html">menu</a>
               <a class="nav-link" href="index3.html">contact</a>
               <a class="nav-link" href="index4.html">about</a>
             </nav> 
-          </div>
 
         </div>
       </header>
