--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>menu</title>
       <link href="style2.css"rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-      <script rel="Bootstrap.bundles.js" href="script.js" ></script>
+      <script rel="Bootstrap.bundles.js" href="scrip2.js" ></script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4Y"></script>
 
 
