--- a/index2.html
+++ b/index2.html
@@ -3,30 +3,43 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>menu</title>
-      <link href="style2.css"rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-      <script rel="Bootstrap.bundles.js" href="scrip2.js" ></script>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4Y"></script>
-
-
+    <title> Restaurant</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
-<!----------------the same nav barfor all pages-------------->
-<!----------------index2.html menu page-------------->
-    <header>
-
-      <nav class="nav">
-        <a class="nav-link active" aria-current="page" href="index.html">home</a>
-        <a class="nav-link" href="#">menu</a>
-        <a class="nav-link" href="#">contact</a>
-        <a class="nav-link disabled">about</a>
-      </nav>
-
-    </header>
 
   <body>
+<!---------esta parte posiciona el logo a la isquierdacontainer-fluid  -->
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Food,LLC</a>
+    <!---- d-flex d-lg-none flex-column justify-content-around i add this peace of code of my button     -->
+    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <!----------navbar-toggler-icon that one is the original code for span----->
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!----esta parte es para que se abra el menu desplegable---->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index2.html">menu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index3.html">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index4.html">Disabled</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-
-    <h1>Hello, world!</h1>
+   
+    <h1>Our </h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
