--- a/index3.html
+++ b/index3.html
@@ -9,36 +9,35 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
-<!---------esta parte posiciona el logo a la isquierda -->
-<nav class="navbar navbar-expand-lg nav-ligth" style="background-color: #555657;">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Food,LLC</a>
-    <!---- d-flex d-lg-none flex-column justify-content-around i add this peace of code of my button     -->
-    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <!----------navbar-toggler-icon that one is the original code for span----->
-      <span class="navbar-toggler-icon"></span>
-      
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index2.html">menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index3.html">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index4.html">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <nav class=" sticky-top border border-black"  style= "background-color:#555657;" > 
+      <div class="navbar navbar-expand-lg  ">
+        <a class="navbar-brand " href="#">Food,LLC</a>          
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">     
+        <span class="navbar-toggler-icon"></span>    
+        </button>
 
-   
+          <div class="collapse navbar-collapse " id="navbarNav">
+          <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="index2.html">menu</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="index3.html">about</a>
+          </li>
+
+          <li class="nav-item">
+           <a class="nav-link" href="index4.html">delivery</a>
+          </li>
+          </ul> 
+        </div>
+      </div>
+    </nav>
+
     <h1>Our Menu 3</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
