--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
   <body>
            <!---------esta parte posiciona el logo a la isquierda -->
            <!----------navbar navbar-expand-lg nav-ligth original code for  nav class------>
-      <nav class="navbar navbar-expand-lg nav-ligth" style="background-color:#555657;"> 
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Food,LLC</a>
-          <!---- d-flex d-lg-none flex-column justify-content-around i add this peace of code of my button     -->
-          <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <!----------navbar-toggler-icon that one is the original code for span----->
+      <nav class=" sticky-top border border-black"  style= "background-color:#555657;" > 
+        <div class="navbar navbar-expand-lg  ">
+          <a class="navbar-brand " href="#">Food,LLC</a>          
+          <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">     
           <span class="navbar-toggler-icon"></span>    
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -37,18 +35,23 @@
             <li class="nav-item">
              <a class="nav-link" href="index4.html">delivery</a>
             </li>
-            </ul>
+            </ul> 
           </div>
         </div>
       </nav>
    
     <h1 class="text-center">Our Menu</h1>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <!-------------------container justify-content-space betwen---------> 
-    <div class="container justify-content-space betwen " style="background-color: #555657">
-      <!-----row row-cols-1 row-cols-snm-2 row-cols-md-4 for the under this coment------>
-      <div class="row row-cols-1 row-cols-lg-1">
-        <div class="col">
+    
+    <!-----------
+      -<div class="container text-center"  >
+      <div class="row-cols-1 gap-3">
+      <div class="col bg-secondary p-3border border-black">
+    ---------------> 
+    <div class="container text-center"  >
+      <div class="row-cols-1 gap-3">
+        <div class="col bg-secondary p-3border border-black">
           <h2 class="tex text-center" ">chicken</h2> 
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
           Veniam sed alias dolore. Magnam praesentium repudiandae consequuntur eaque 
@@ -63,7 +66,7 @@
           </p>
         </div>
 
-        <div class="col">
+        <div class="col bg-secondary p-3border border-black">
           <h2 class="text text-center">suchi</h2> 
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
           Veniam sed alias dolore. Magnam praesentium repudiandae consequuntur eaque 
@@ -78,7 +81,7 @@
           </p>
         </div>
         
-        <div class="col">
+        <div class="col bg-secondary p-3border border-black">
           <h2 class="text text-center">beef</h2> 
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
           Veniam sed alias dolore. Magnam praesentium repudiandae consequuntur eaque 
@@ -93,7 +96,7 @@
           </p>
         </div>
 
-        <div class="col">
+        <div class="col bg-secondary p-3border border-black">
           <h2 class="text text-center">chicken</h2> 
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
           Veniam sed alias dolore. Magnam praesentium repudiandae consequuntur eaque 
