--- a/index4.html
+++ b/index4.html
@@ -12,7 +12,7 @@
   
     <!---<nav class="navbar navbar-dark bg-dark">------>
           
-          <nav class="navbar navbar-dark bg-dark">
+          <nav class=" sticky-top bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand " href="#">Food,LLC</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
