--- a/food.html
+++ b/food.html
@@ -9,6 +9,22 @@
     </head>
 
      <body>
+      <nav class=" navbar sticky-top border border-black border border-3" style= "background-color:#969294;">
+        <div class="container-fluid ">
+          <a class="navbar-brand fs-2 fw-bolder  " href="#">Food,LLC</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+      <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
+        <div class="bg-Ligth ">
+          <h5 class="text-center body-dark border-bottom">chicken</h5>
+          <h5 class="text-center body-dark border-bottom">suchi</h5>
+          <h5 class="text-center body-dark border-bottom">Beef</h5>
+         
+        </div>
+     </div> 
 
        <h1> OUR MENU </h1>
 
@@ -431,4 +447,4 @@
   ---------> 
    
 
-      
+ 
