--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
-         <nav class=" navbar sticky-top border border-black border border-3" style= "background-color:#969294;">
-            <div class="container-fluid ">
+         <nav class=" navbar sticky-top  navbar-expand-md border border-black border border-3" style= "background-color:#969294;">
+            <div class="container-fluid">
               <a class="navbar-brand fs-2 fw-bolder  " href="#">Food,LLC</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <button class="navbar-toggler" type="button-" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon "></span>
               </button>
             </div>
-          </nav>
-          <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
+         </nav>
+          <div class="collapse-" id="navbarToggleExternalContent" data-bs-theme="dark">
             <div class="bg-Ligth ">
               <h5 class="text-center body-dark border-bottom">chicken</h5>
               <h5 class="text-center body-dark border-bottom">suchi</h5>
               <h5 class="text-center body-dark border-bottom">Beef</h5>
              
             </div>
-         </div>    
+          </div>    
               
        <h1 class="container text-center">Our Menu</h1>
 
