--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               </button>
             </div>
          </nav>
-          <div class="collapse-" id="navbarToggleExternalContent" data-bs-theme="dark">
+          <div class="navbar-collapse collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
             <div class="bg-Ligth ">
               <h5 class="text-center body-dark border-bottom">chicken</h5>
               <h5 class="text-center body-dark border-bottom">suchi</h5>
