--- a/food.html
+++ b/food.html
@@ -1,14 +1,15 @@
-<!doctype html>
+<!DOCTYPE html >
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="script.js"></script>
-    <script>
-      
-    </script>  
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
   </head>
-  <body>
-    <h1></h1>
-    </body>
-</html>
+
+<body>
+  <h1>Module 4 Solution Starter</h1>
+</body>
+<html> 
